<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sonako Reader</string>
    <string name="action_settings">Tùy chỉnh</string>
    <string name="lnTitle">LN Title</string>
    <string name="error_occurred">Đã có lỗi xảy ra:</string>
    <string name="filter">Lọc danh sách</string>
    <string name="ln_title_keyword">Từ khóa trong tiêu đề</string>
    <string name="genres_selection_label">Thể loại</string>
    <string name="filter_reset">Toàn bộ</string>
    <string name="action_refresh_text">Tải lại văn bản</string>
    <string name="action_refresh_text_and_images">Tải lại toàn bộ</string>
    <string name="downloading_text">Đang tải văn bản của %1$s</string>
    <string name="analyzing_text">Đang phân tích văn bản của %1$s</string>
    <string name="preprocessing_text">Đang xử lý văn bản của %1$s</string>
    <string name="preprocessing_display">Đang xử lý giao diện của %1$s</string>
    <string name="caching">Đang lưu %1$s vào bộ nhớ</string>
    <string name="downloading_ln_list">Tải danh sách từ internet</string>
    <string name="ordering_ln_list">Sắp xếp danh sách</string>
    <string name="caching_ln_list">Lưu danh sách</string>
    <string name="downloading_tags">Tải tag</string>
    <string name="downloading_image">Tải ảnh</string>
    <string name="not_having">Sonako không chứa %1$s</string>
    <string name="register_favorite">Thêm vào Yêu Thích</string>
    <string name="unregister_favorite">Bỏ khỏi Yêu Thích</string>
    <string name="ok">OK</string>
    <string name="no">Thoai</string>
    <string name="start_downloading">Đang tải</string>
    <string name="start_downloading_fmt">Đang tải %1$s</string>
    <string name="download_finish">Đã tải xong %1$s</string>
    <string name="last_read">Lần đọc cuối:</string>
    <string name="download_all_chapters">Tải hàng loạt chương truyện</string>
    <string name="all">Tất cả</string>
    <string name="refresh_text">Tải lại trang chủ</string>
    <string name="no_links_download">Không có link để tải</string>
    <string name="which_link_to_download">Bạn muốn tải link nào?</string>
    <string name="try_redownload_text">Hãy thử download trang chủ lại</string>
    <string name="download_waiting">%1$s đã vào danh sách chờ tải</string>
    <string name="download_already_scheduled" tools:keep="@string/download_already_scheduled">đã ở sẵn trong lịch tải</string>
    <string name="download_starting">Bắt đầu tải %1$s</string>
    <string name="download_terminated" tools:keep="@string/download_terminated">Đã tải xong</string>
    <string name="download_select_all">Chọn tất cả</string>
    <string name="app_name_short">SNK Reader</string>
    <string name="download_db">Cơ sở dữ liệu chưa có.</string>
    <string name="refresh_missing_images">Tải lại hình ảnh bị thiếu</string>
    <string name="title_pref_skin">Chủ đề</string>
    <string name="key_pref_skin">key_pref_skin</string>
    <string name="title_pref_download_external_images">Tải ảnh ngoài wikia về</string>
    <string name="key_pref_download_external_images">key_pref_download_external_images</string>
    <string name="key_pref_download_noncached_pages">key_pref_download_noncached_pages</string>
    <string name="title_pref_download_noncached_pages">Tự động tải trang mới</string>
    <string name="download_when_wifi">Chỉ khi có Wifi</string>
    <string name="skin_holy_value">holy</string>
    <string name="skin_dark_value">dark</string>
    <string name="download_when_cellular">3G, 4G cũng chơi</string>
    <string name="download_when_wifi_value">wifi</string>
    <string name="download_when_cellular_value">cellular</string>
    <string name="key_pref_download_when">key_pref_download_when</string>
    <string name="title_pref_download_when">Khi nào được phép tải?</string>
    <string name="download_wikia_images_original">Nguyên gốc</string>
    <string name="download_wikia_images_adaptive">Không rộng quá màn hình ngang</string>
    <string name="download_wikia_images_not_over_1024px">Không rộng quá 1024px</string>
    <string name="download_wikia_images_original_value">original</string>
    <string name="download_wikia_images_adaptive_value">adaptive</string>
    <string name="download_wikia_images_not_over_1024px_value">1024</string>
    <string name="key_pref_download_wikia_images">key_pref_download_wikia_images</string>
    <string name="title_pref_download_wikia_images">Kích thước ảnh</string>
    <string name="title_database_options">Cơ sở dữ liệu</string>
    <string name="pref_app_info">Thông tin</string>
    <string name="summary_pref_about">Tàng kinh các cho đêm trường không trăng không net</string>
    <string name="title_app_version">Phiên bản</string>
    <string name="title_update_lndb">Cập nhật danh sách LN</string>
    <string name="title_clear_lndb">Xóa danh sách LN</string>
    <string name="title_clear_history">Xóa lịch sử đọc</string>
    <string name="default_download_when">@string/download_when_wifi_value</string>
    <string name="default_skin">@string/skin_holy_value</string>
    <string name="default_download_wikia_images">@string/download_wikia_images_not_over_1024px_value</string>
    <string name="summary_download_noncached_pages">Mỗi khi nhấp vào link chưa có trong bộ nhớ</string>
    <string name="summary_download_external_images">Chú ý: Hình ảnh ngoài wikia sẽ không được nén kích cỡ khi tải</string>
    <string name="wanna_download">Trang này chưa có trong tủ truyện. Bạn có muốn tải?</string>
    <string name="confirm_delete">Are you sure about this ? T_T</string>
    <string name="update_completed">Đã cập nhật xong</string>
    <string name="no_internet">Không có internet</string>
    <string name="not_authorized_cellular">Hãy tiết kiệm 3G-4G!</string>
    <string name="title_download_options">Thiết lập tải</string>
    <string name="title_interface_options">Giao diện</string>
    <string name="key_pref_download_webp">key_download_webp</string>
    <string name="title_pref_download_webp">Ưu tiên dùng webp</string>
    <string name="summary_download_webp">Với các file lớn, webp nhỏ nhẹ hơn các định dạng khác nhiều lần. Tuy nhiên, Android 4 không hỗ trợ webp đầy đủ.</string>
    <string name="key_pref_first_page">key_pref_first_page</string>
    <string name="default_first_page">1</string>
    <string name="title_pref_first_page">Mặt tiền</string>
    <string name="page_ln_showcase">Danh sách</string>
    <string name="page_ln_favorites">Yêu thích</string>
    <string name="page_history">Lịch sử</string>
    <string name="page_download">Download</string>
    <string name="page_biblio">Tủ truyện</string>
    <string name="summary_developper">Perfectstrong</string>
    <string name="title_developper">Dev</string>
    <string name="key_interface_options">key_interface_options</string>
    <string name="key_download_options">key_download_options</string>
    <string name="key_database_options">key_database_options</string>
    <string name="key_app_info">key_app_info</string>
    <string name="key_pref_sonako">key_pref_sonako</string>
    <string name="cleared_lndb">Đã xóa hết tàng kinh các</string>
    <string name="title_copyright">Copyright</string>
    <string name="title_issue_report">Báo lỗi</string>
    <string name="title_contact">Liên hệ</string>
    <string name="label_history_date_limit">Thời gian:</string>
    <string name="yesterday">Hôm qua</string>
    <string name="last_week">Tuần rồi</string>
    <string name="last_month">Tháng rồi</string>
    <string name="start_scanning">Bắt đầu quét</string>
    <string name="clear_biblio">Dọn tủ truyện</string>
    <string name="update_biblio">Cập nhật tủ truyện</string>
    <string name="title_update_biblio">Cập nhật tủ truyện</string>
    <string name="title_clear_biblio">Xóa tủ truyện</string>
    <string name="ln_status_active">Tình trạng: Liên tục cập nhật</string>
    <string name="ln_status_idle">Tình trạng: Không cập nhật trong 3 tháng qua</string>
    <string name="ln_status_stalled">Tình trạng: Không cập nhật trong 6 tháng qua</string>
    <string name="ln_status_completed">Tình trạng: Hoàn thành</string>
    <string name="ln_status_inactive">Tình trạng: Không cập nhật trong 1 năm qua</string>
    <string name="label_cache_date_limit">Lần cập nhật cuối:</string>
    <string name="return_home">Trở về cửa sổ xuất phát</string>
    <string name="forward" tools:keep="@string/forward">Tiến tới</string>
    <string name="backward" tools:keep="@string/backward">Quay lui</string>
    <string name="biblio_empty">Tủ truyện trống trơn :(</string>
    <string name="theme_changing_caution">App sẽ tự động khởi động lại để có hiệu lực.</string>
    <string name="show_all">Hiện tất cả</string>
    <string name="not_having_title" tools:keep="@string/not_having_title">Sonako không chứa trang</string>
    <string name="tag_is_null" tools:keep="@string/tag_is_null">Tag không xác định</string>
    <string name="cannot_hidden_img">Không thể giấu ảnh khỏi gallery</string>
    <string name="has_hidden_img">Đã giấu ảnh khỏi gallery</string>
    <string name="delete_ln">Xóa bộ truyện</string>
    <string name="delete_chapter">Xóa chương</string>
    <string name="delete_chapter_and_img">Xóa chương và ảnh</string>
    <string name="rescan_ln">Quét lại bộ nhớ</string>
    <string name="rescan_ln_done">Đã quét xong</string>
    <string name="delete_ln_start">Bắt đầu xóa truyện</string>
    <string name="delete_ln_end">Đã xóa xong</string>
    <string name="delete_biblio_start">Bắt đầu xóa thư viện</string>
    <string name="delete_biblio_end">Đã xóa xong thư viện</string>
    <string name="delete_chapter_start">Bắt đầu xóa chương</string>
    <string name="delete_chapter_end">Đã xóa chương xong</string>
    <string name="toc_title">Mục lục</string>
    <string name="please_wait">Xin bình tĩnh một chút</string>
    <string name="no_heading_no_toc">Trang không có đề mục nên sẽ không có mục lục</string>
    <string name="undefined_title">Tiêu đề không xác định</string>
    <string name="no_cached">Văn bản của %1$s chưa tồn tại trong bộ nhớ</string>
    <string name="error_on_downloading">Đã có lỗi xảy ra khi tải %1$s</string>
    <string name="connection_error">Lỗi đường truyền</string>
    <string name="downloader_notification_channel_description">Thông tin về quá trình tải</string>
    <string name="reload">Mở lại trang</string>
    <string name="reading_font">Font cho trang truyện</string>
    <string name="key_reading_font">key_reading_font</string>
    <string name="default_reading_font_summary">Mặc định theo chủ đề</string>
    <string name="reading_font_select_dialog_caution">Hãy chọn phông chữ theo ý thích.</string>
    <string name="reading_font_select_dialog_select_font">Chọn font khác</string>
    <string name="downloading_starting_images">Bắt đầu tải ảnh của %1$s</string>
    <string name="biblio">Thư viện</string>
</resources>
