<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="perfectstrong.sonako.sonakoreader.activity.PageReadingActivity">
    <item
        android:id="@+id/action_return_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/return_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_download_all_chapters"
        android:title="@string/download_all_chapters" />
    <item
        android:id="@+id/action_refresh_text"
        android:title="@string/action_refresh_text" />
    <item
        android:id="@+id/action_refresh_missing_images"
        android:title="@string/refresh_missing_images" />
    <item
        android:id="@+id/action_refresh_text_and_images"
        android:title="@string/action_refresh_text_and_images" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings" />
</menu>