<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="perfectstrong.sonako.sonakoreader.MainActivity">
    <item
        android:id="@+id/ln_title_context_menu_register_favorite"
        android:title="@string/register_favorite" />
    <item
        android:id="@+id/ln_title_context_menu_unregister_favorite"
        android:title="@string/unregister_favorite" />
    <item
        android:id="@+id/ln_title_context_menu_refresh_text"
        android:title="@string/refresh_text" />
    <item
        android:id="@+id/ln_title_context_menu_refresh_missing_images"
        android:title="@string/refresh_missing_images"/>
    <item
        android:id="@+id/ln_title_context_menu_download_all_chapters"
        android:title="@string/download_all_chapters" />
</menu>